--- a/PayBokApp/package.json
+++ b/PayBokApp/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@swimlane/ngx-charts": "^20.1.0",
+    "angular-google-charts": "^2.2.3",
+    "apexcharts": "^3.36.0",
+    "ng-apexcharts": "^1.7.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
